[gd_scene load_steps=9 format=2]

[ext_resource path="res://Sprites/Objects/wheel.png" type="Texture" id=1]
[ext_resource path="res://Materials/metalic.tres" type="Material" id=2]
[ext_resource path="res://Materials/Metal_02.tres" type="Material" id=3]
[ext_resource path="res://prefabs/Interactables/Interactable.tscn" type="PackedScene" id=4]
[ext_resource path="res://Scripts/Interactables/CrankWheel.gd" type="Script" id=5]

[sub_resource type="QuadMesh" id=1]

[sub_resource type="SpatialMaterial" id=2]
flags_transparent = true
params_cull_mode = 2
albedo_texture = ExtResource( 1 )

[sub_resource type="CylinderMesh" id=3]
radial_segments = 5

[node name="CrankWheel" type="Spatial"]
script = ExtResource( 5 )

[node name="Interactable" parent="." instance=ExtResource( 4 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.315264, 0 )
isHoldToInteract = true

[node name="MeshInstance" type="MeshInstance" parent="."]
transform = Transform( 1, 0, 0, 0, -1.62921e-07, -1, 0, 1, -1.62921e-07, 0, 0.282967, 0 )
mesh = SubResource( 1 )
material/0 = SubResource( 2 )

[node name="MeshInstance2" type="MeshInstance" parent="."]
transform = Transform( 0.0602367, 0, 0, 0, 0.48911, 0, 0, 0, 0.0602367, 0, -0.207483, 0 )
mesh = SubResource( 3 )
material/0 = ExtResource( 2 )

[node name="MeshInstance3" type="MeshInstance" parent="."]
transform = Transform( 0.171579, 0, 0, 0, 0.320812, 0, 0, 0, 0.171579, 0, -0.377795, 0 )
mesh = SubResource( 3 )
material/0 = ExtResource( 3 )

[node name="Timer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true
[connection signal="emit_prompt" from="Interactable" to="." method="_on_Interactable_emit_prompt"]
[connection signal="holding" from="Interactable" to="." method="_on_Interactable_holding"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
